Inicio del login y registro de usuario

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,91 +1,20 @@
-<link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
-<div class="relative bg-white">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6">
-      <div class="flex justify-between items-center border-b-2 border-gray-100 py-6 md:justify-start md:space-x-10">
-        <div class="flex justify-start lg:w-0 lg:flex-1">
-          <a href="#">
-            <span class="sr-only">Workflow</span>
-            <img class="h-8 w-auto sm:h-10" src="../assets/img/logo.png" alt="">
-          </a>
-        </div>
-        <div class="-mr-2 -my-2 md:hidden">
-          <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-            <span class="sr-only">Open menu</span>
-            <!-- Heroicon name: outline/menu -->
-            <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-          </button>
-        </div>
-        <nav class="hidden md:flex space-x-10">
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">
-            Artistas
-          </a>
-          <a href="#" class="text-base font-medium text-gray-500 hover:text-gray-900">
-            Productos
-          </a>
-        </nav>
-        <div class="hidden md:flex items-center justify-end md:flex-1 lg:w-0">
-          <a href="login" class="whitespace-nowrap text-base font-medium text-gray-500 hover:text-gray-900">
-            Inicia sesión
-          </a>
-          <a href="/register" class="ml-8 whitespace-nowrap inline-flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-purple-800 hover:bg-purple-900">
-            Regístrate
-          </a>
-        </div>
-      </div>
-    </div>
-  
-    <!--
-      Mobile menu, show/hide based on mobile menu state.
-  
-      Entering: "duration-200 ease-out"
-        From: "opacity-0 scale-95"
-        To: "opacity-100 scale-100"
-      Leaving: "duration-100 ease-in"
-        From: "opacity-100 scale-100"
-        To: "opacity-0 scale-95"
-    -->
-    <div class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right md:hidden">
-      <div class="rounded-lg shadow-lg ring-1 ring-black ring-opacity-5 bg-white divide-y-2 divide-gray-50">
-        <div class="pt-5 pb-6 px-5">
-          <div class="flex items-center justify-between">
-            <div>
-              <img class="h-8 w-auto" src="../assets/img/logo.png" alt="Workflow">
-            </div>
-            <div class="-mr-2">
-              <button type="button" class="bg-white rounded-md p-2 inline-flex items-center justify-center text-gray-400 hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-inset focus:ring-indigo-500">
-                <span class="sr-only">Close menu</span>
-                <!-- Heroicon name: outline/x -->
-                <svg class="h-6 w-6" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" aria-hidden="true">
-                  <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-              </button>
-            </div>
-          </div>
-        </div>
-        <div class="py-6 px-5 space-y-6">
-          <div class="grid grid-cols-2 gap-y-4 gap-x-8">
-            <a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700">
-              Artistas
-            </a>
-            <a href="#" class="text-base font-medium text-gray-900 hover:text-gray-700">
-              Productos
-            </a>
-          </div>
-          <div>
-            <a href="#" class="w-full flex items-center justify-center px-4 py-2 border border-transparent rounded-md shadow-sm text-base font-medium text-white bg-indigo-600 hover:bg-indigo-700">
-              Sign up
-            </a>
-            <p class="mt-6 text-center text-base font-medium text-gray-500">
-              ¿Ya tienes una cuenta?
-              <a href="/login" class="text-indigo-600 hover:text-indigo-500">
-                Entra en tu cuenta
-              </a>
-            </p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
+<div>
+  <nav class="p-6 bg-gray-200 h-14 flex justify-between">
+    <ul class="flex items-center">
+        <li>
+            <a routerLink="" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
+        </li>
+    </ul>
+
+    <ul class="flex items-center">
+        <li>
+            <a routerLink="/login" class="p-3">Iniciar sesión</a>
+        </li>
+        <li>
+            <a routerLink="/register" class="p-3">Registrarse</a>
+        </li>
+    </ul>
+  </nav>
+</div>
+
 <router-outlet></router-outlet>
