--- a/artist4all_angular/src/app/register/register.component.html
+++ b/artist4all_angular/src/app/register/register.component.html
@@ -10,6 +10,30 @@
       <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
         <form #formRegister="ngForm" class="space-y-6"  method="POST" (ngSubmit)="register(); formRegister.reset()">
           <div>
+            <label for="name" class="block text-sm font-medium text-gray-700">
+              Nombre
+            </label>
+            <div class="mt-1">
+              <input #inputName="ngModel" [(ngModel)]="name" placeholder="Introduce tu nombre" id="name" name="name" type="text" autocomplete="name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+            </div>
+          </div>
+          <div>
+            <label for="lastname1" class="block text-sm font-medium text-gray-700">
+              Primer apellido
+            </label>
+            <div class="mt-1">
+              <input #inputLastName1="ngModel" [(ngModel)]="lastname1" placeholder="Introduce tu apellido" id="lastname1" name="lastname1" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+            </div>
+          </div>
+          <div>
+            <label for="lastname2" class="block text-sm font-medium text-gray-700">
+              Segundo apellido
+            </label>
+            <div class="mt-1">
+              <input #inputLastName2="ngModel" [(ngModel)]="lastname2" placeholder="Introduce tu apellido" id="lastname2" name="lastname2" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+            </div>
+          </div>
+          <div>
             <label for="email" class="block text-sm font-medium text-gray-700">
               Correo electrónico
             </label>
