added more fields for register

--- a/artist4all_angular/src/app/register/register.component.html
+++ b/artist4all_angular/src/app/register/register.component.html
@@ -14,7 +14,7 @@
               Nombre
             </label>
             <div class="mt-1">
-              <input #inputName="ngModel" [(ngModel)]="name" placeholder="Introduce tu nombre" id="name" name="name" type="text" autocomplete="name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+              <input #inputName="ngModel" [(ngModel)]="name" placeholder="Introduce tu nombre" id="name" name="name" type="text" autocomplete="name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
             </div>
           </div>
           <div>
@@ -22,7 +22,7 @@
               Primer apellido
             </label>
             <div class="mt-1">
-              <input #inputLastName1="ngModel" [(ngModel)]="lastname1" placeholder="Introduce tu apellido" id="lastname1" name="lastname1" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+              <input #inputLastName1="ngModel" [(ngModel)]="lastname1" placeholder="Introduce tu primer apellido" id="lastname1" name="lastname1" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
             </div>
           </div>
           <div>
@@ -30,7 +30,7 @@
               Segundo apellido
             </label>
             <div class="mt-1">
-              <input #inputLastName2="ngModel" [(ngModel)]="lastname2" placeholder="Introduce tu apellido" id="lastname2" name="lastname2" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+              <input #inputLastName2="ngModel" [(ngModel)]="lastname2" placeholder="Introduce tu segundo apellido" id="lastname2" name="lastname2" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
             </div>
           </div>
           <div>
@@ -38,7 +38,7 @@
               Correo electrónico
             </label>
             <div class="mt-1">
-              <input #inputEmail="ngModel" [(ngModel)]="email" placeholder="Introduce tu email" id="email" name="email" type="email" autocomplete="email" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+              <input #inputEmail="ngModel" [(ngModel)]="email" placeholder="Introduce tu email" id="email" name="email" type="email" autocomplete="email" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
             </div>
           </div>
 
@@ -47,7 +47,7 @@
               Contraseña
             </label>
             <div class="mt-1">
-              <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña" id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+              <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña" id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
             </div>
           </div>
 
@@ -56,7 +56,7 @@
               Confirma la contraseña
             </label>
             <div class="mt-1">
-              <input #inputPasswordConfirm="ngModel" [(ngModel)]="passwordConfirm" placeholder="Confirma tu contraseña" id="passwordConfirm" name="passwordConfirm" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" requiered>
+              <input #inputPasswordConfirm="ngModel" [(ngModel)]="passwordConfirm" placeholder="Confirma tu contraseña" id="passwordConfirm" name="passwordConfirm" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" required>
             </div>
           </div>
 
