better style for sign in & sign up

--- a/artist4all_angular/src/app/app.component.html
+++ b/artist4all_angular/src/app/app.component.html
@@ -8,10 +8,10 @@
 
     <ul class="flex items-center">
         <li>
-            <a routerLink="/login" class="p-3">Iniciar sesión</a>
+            <a routerLink="/login" class="p-3 hover:text-purple-600">Iniciar sesión</a>
         </li>
         <li>
-            <a routerLink="/register" class="p-3">Registrarse</a>
+            <a routerLink="/register" class="p-3 hover:text-purple-600">Registrarse</a>
         </li>
     </ul>
   </nav>
