--- a/artist4all_angular/src/app/register/register.component.html
+++ b/artist4all_angular/src/app/register/register.component.html
@@ -1,28 +1,74 @@
-<div class="min-h-screen bg-gray-50 flex flex-col justify-center py-12 sm:px-6 lg:px-8">
-    <div class="sm:mx-auto sm:w-full sm:max-w-md">
-      <!--<img class="mx-auto h-14 w-auto" src="../assets/img/logo.png" alt="Workflow">-->
-      <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
-        Crea una cuenta
-      </h2>
-    </div>
+<div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8">
+  <div class="sm:mx-auto sm:w-full sm:max-w-md">
+    <!--<img class="mx-auto h-14 w-auto" src="../assets/img/logo.png" alt="Workflow">-->
+    <h2 class="text-center text-3xl font-extrabold text-gray-900">
+      Regístrate
+    </h2>
+  </div>
 
-    <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
-      <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
-        <form #formRegister="ngForm" class="space-y-6"  method="POST" (ngSubmit)="register(); formRegister.reset()">
-          <div>
-            <label for="name" class="block text-sm font-medium text-gray-700">
-              Nombre
-            </label>
-            <div class="mt-1">
-              <input #inputName="ngModel" [(ngModel)]="name" placeholder="Introduce tu nombre" id="name" name="name" type="text" autocomplete="name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+  <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-2xl">
+    <div class="bg-white py-8 px-4 shadow sm:rounded-lg sm:px-10">
+      <form #formRegister="ngForm" class="space-y-6" method="POST" (ngSubmit)="register(); formRegister.reset()">
+        <div class="text-center md:text-left">
+          <label for="typeUser" class="text-base font-medium text-gray-700">
+            ¿Cómo quieres registrarte?
+          </label>
+          <div class="mt-1">
+            <div class="flex items-center justify-center md:justify-start mt-5 mb-2">
+              <input #inputTypeUser="ngModel" [(ngModel)]="type_user"
+                class="focus:ring-purple-500 h-4 w-4  text-purple-600 border-gray-300" id="type_follower"
+                name="type_user" type="radio" value="0" autocomplete="family-name" required>
+              <label for="typeFollower" class="ml-2 mr-2 text-base font-medium text-gray-700">
+                Seguidor
+              </label>
+              <input #inputTypeUser="ngModel" [(ngModel)]="type_user" id="type_artist"
+                class="focus:ring-purple-500 h-4 w-4 text-purple-600 border-gray-300" name="type_user" type="radio"
+                value="1" autocomplete="family-name" required>
+              <label for="typeArtist" class="ml-2 text-base font-medium text-gray-700">
+                Artista
+              </label>
             </div>
           </div>
-          <div>
+        </div>
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-700">
+            Correo electrónico
+          </label>
+          <div class="mt-1">
+            <input #inputEmail="ngModel" [(ngModel)]="email" placeholder="Introduce tu email" id="email" name="email"
+              type="email" autocomplete="email" required
+              class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
+          </div>
+        </div>
+        <div>
+          <label for="username" class="block text-sm font-medium text-gray-700">
+            Nombre de usuario
+          </label>
+          <div class="mt-1">
+            <input #inputUsername="ngModel" [(ngModel)]="username" placeholder="Introduce tu nombre de usuario"
+              id="username" name="username" type="text" autocomplete="family-name" required
+              class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
+          </div>
+        </div>
+        <div>
+          <label for="name" class="block text-sm font-medium text-gray-700">
+            Nombre
+          </label>
+          <div class="mt-1">
+            <input #inputName="ngModel" [(ngModel)]="name" placeholder="Introduce tu nombre" id="name" name="name"
+              type="text" autocomplete="name" required
+              class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
+          </div>
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <div class="sm:col-span-1">
             <label for="surname1" class="block text-sm font-medium text-gray-700">
               Primer apellido
             </label>
             <div class="mt-1">
-              <input #inputSurname1="ngModel" [(ngModel)]="surname1" placeholder="Introduce tu primer apellido" id="surname1" name="surname1" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+              <input #inputSurname1="ngModel" [(ngModel)]="surname1" placeholder="Introduce tu primer apellido"
+                id="surname1" name="surname1" type="text" autocomplete="family-name" required
+                class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
             </div>
           </div>
           <div>
@@ -30,31 +76,23 @@
               Segundo apellido
             </label>
             <div class="mt-1">
-              <input #inputSurname22="ngModel" [(ngModel)]="surname2" placeholder="Introduce tu segundo apellido" id="surname2" name="surname2" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+              <input #inputSurname22="ngModel" [(ngModel)]="surname2" placeholder="Introduce tu segundo apellido"
+                id="surname2" name="surname2" type="text" autocomplete="family-name" required
+                class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
             </div>
           </div>
-          <div>
-            <label for="email" class="block text-sm font-medium text-gray-700">
-              Correo electrónico
-            </label>
-            <div class="mt-1">
-              <input #inputEmail="ngModel" [(ngModel)]="email" placeholder="Introduce tu email" id="email" name="email" type="email" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-            </div>
-          </div>
-          <div>
-            <label for="username" class="block text-sm font-medium text-gray-700">
-              Nombre de usuario
-            </label>
-            <div class="mt-1">
-              <input #inputUsername="ngModel" [(ngModel)]="username" placeholder="Introduce tu nombre de usuario" id="username" name="username" type="text" autocomplete="family-name" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
-            </div>
-          </div>
-          <div>
-            <label for="password" class="block text-sm font-medium text-gray-700">
-              Contraseña
-            </label>
-            <div class="mt-1">
-              <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña" id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+        </div>
+        <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
+          <div class="sm:col-span-1">
+            <div>
+              <label for="password" class="block text-sm font-medium text-gray-700">
+                Contraseña
+              </label>
+              <div class="mt-1">
+                <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña"
+                  id="password" name="password" type="password" autocomplete="current-password" required
+                  class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
+              </div>
             </div>
           </div>
           <div>
@@ -62,47 +100,36 @@
               Confirma la contraseña
             </label>
             <div class="mt-1">
-              <input #inputPasswordConfirm="ngModel" [(ngModel)]="passwordConfirm" placeholder="Confirma tu contraseña" id="passwordConfirm" name="passwordConfirm" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm">
+              <input #inputPasswordConfirm="ngModel" [(ngModel)]="passwordConfirm" placeholder="Confirma tu contraseña"
+                id="passwordConfirm" name="passwordConfirm" type="password" autocomplete="current-password" required
+                class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
             </div>
           </div>
-          <div>
-            <label for="typeUser" class="text-sm font-medium text-gray-700">
-                Tipo de usuario:
+        </div>
+        <div class="flex items-center justify-between">
+          <div class="flex items-center">
+            <input id="remember_me" name="remember_me" type="checkbox"
+              class="h-4 w-4 text-purple-600 focus:ring-purple-500 border-gray-300 rounded">
+            <label for="remember_me" class="ml-2 block text-sm text-gray-900">
+              Recuérdame
             </label>
-            <div class="mt-1">
-              <label for="typeFollower" class="text-sm font-medium text-gray-700">
-                Seguidor
-              </label>
-              <input #inputTypeUser="ngModel" [(ngModel)]="type_user" id="type_follower" name="type_user" type="radio" value="0" autocomplete="family-name" required>
-              <label for="typeArtist" class="text-sm font-medium text-gray-700">
-                Artista
-              </label>
-              <input #inputTypeUser="ngModel" [(ngModel)]="type_user" id="type_artist" name="type_user" type="radio" value="1" autocomplete="family-name" required>
-            </div>
           </div>
-
-          <div class="flex items-center justify-between">
-            <div class="flex items-center">
-              <input id="remember_me" name="remember_me" type="checkbox" class="h-4 w-4 text-indigo-600 focus:ring-indigo-500 border-gray-300 rounded">
-              <label for="remember_me" class="ml-2 block text-sm text-gray-900">
-                Recuérdame
-              </label>
-            </div>
-            <div class="text-sm">
-              <a href="#" class="font-medium text-indigo-600 hover:text-indigo-500">
-                ¿Has olvidado tu contraseña?
-              </a>
-            </div>
+          <div class="text-sm">
+            <a href="#" class="font-medium text-purple-600 hover:text-purple-500">
+              ¿Has olvidado tu contraseña?
+            </a>
           </div>
+        </div>
 
-          <div>
-            <button type="submit" class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
-              Regístrate
-            </button>
-          </div>
-        </form>
+        <div>
+          <button type="submit"
+            class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
+            Regístrate
+          </button>
+        </div>
+      </form>
 
-        <!--<div class="mt-6">
+      <!--<div class="mt-6">
           <div class="relative">
             <div class="absolute inset-0 flex items-center">
               <div class="w-full border-t border-gray-300"></div>
@@ -143,6 +170,6 @@
             </div>
           </div>
         </div>-->
-      </div>
     </div>
   </div>
+</div>
