styled landing page

--- a/artist4all_angular/src/app/app.component.html
+++ b/artist4all_angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-<div>
+<!--<div>
     <nav class="p-6 bg-white h-14 flex justify-between">
         <ul class="flex items-center">
             <li>
@@ -16,8 +16,7 @@
             </li>
         </ul>
     </nav>
-</div>
-
+</div>-->
 <router-outlet></router-outlet>
 <footer class="bg-white">
     <div class="max-w-7xl mx-auto py-12 px-4 overflow-hidden sm:px-6 lg:px-8">
