--- a/artist4all_angular/src/app/landing/landing.component.html
+++ b/artist4all_angular/src/app/landing/landing.component.html
@@ -6,13 +6,13 @@
         <div class="max-w mx-auto">
           <div class="relative shadow-xl sm:overflow-hidden">
             <div class="absolute inset-0">
-              <img class="h-full w-full object-cover" src="https://images.unsplash.com/photo-1521737852567-6949f3f9f2b5?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=2830&q=80&sat=-100" alt="People working on laptops">
-              <div class="absolute inset-0 bg-indigo-700" style="mix-blend-mode: multiply;"></div>
+              <img class="h-full w-full object-cover" src="https://images.unsplash.com/photo-1459908676235-d5f02a50184b?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1350&q=80" alt="People working on laptops">
+              <div class="absolute inset-0 bg-gray-400" style="mix-blend-mode: multiply;"></div>
             </div>
-            <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-32 lg:px-8">
+            <div class="relative px-4 py-16 sm:px-6 sm:py-24 lg:py-80 lg:px-8">
               <h1 class="text-center text-4xl font-extrabold tracking-tight sm:text-5xl lg:text-6xl">
                 <span class="block text-white">Lorem ipsum dolor sit</span>
-                <span class="block text-indigo-200">Lorem, ipsum.</span>
+                <span class="block text-white">Lorem, ipsum.</span>
               </h1>
               <p class="mt-6 max-w-lg mx-auto text-center text-xl text-indigo-200 sm:max-w-3xl">
                 Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.
