--- a/artist4all_angular/src/app/app.component.html
+++ b/artist4all_angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-<!--<div>
+<div>
   <nav class="p-6 bg-gray-200 h-14 flex justify-between">
     <ul class="flex items-center">
         <li>
@@ -8,14 +8,14 @@
     </ul>
 
     <ul class="flex items-center">
-      <div class="ml-3 relative" *ngIf="isAuthenticated()">
+      <div class="ml-3 relative" *ngIf="isAuthenticated()" onclick="toggleMenu();">
         <div>
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
             <span class="sr-only">Open user menu</span>
             <img class="h-8 w-8 rounded-full" src="../assets/img/imgUnknown.png" alt="">
           </button>
         </div>
-        <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+        <div id="profile-menu" class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Mi perfil</a>
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Configuracion</a>
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()">Cerrar sesión</a>
@@ -23,7 +23,7 @@
       </div>
     </ul>
   </nav>
-</div>-->
+</div>
 
 <router-outlet></router-outlet>
 <footer class="bg-white">
@@ -106,3 +106,14 @@
     </p>
     </div>
 </footer>
+<script>
+    function toggleMenu() {
+    var element = document.getElementById('profile-menu')
+    if (element.classList.contains('hidden')) {
+        element.classList.remove('hidden');
+    }
+    else {
+        element.classList.add('hidden');
+    }
+}
+</script>
