--- a/artist4all_angular/src/app/header/header.component.html
+++ b/artist4all_angular/src/app/header/header.component.html
@@ -8,13 +8,13 @@
 
     <ul class="flex items-center">
       <div class="ml-3 relative" *ngIf="isAuthenticated()">
-        <div>
+        <div (click)="isMenuDisplayed()">
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
             <span class="sr-only">Open user menu</span>
             <img class="h-8 w-8 rounded-full" src="../assets/img/imgUnknown.png" alt="">
           </button>
         </div>
-        <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
+        <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Mi perfil</a>
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Configuracion</a>
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()">Cerrar sesión</a>
