--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -2,11 +2,14 @@
   <nav class="p-6 bg-gray-200 h-14 flex justify-between">
     <ul class="flex items-center">
         <li>
-            <a routerLink="" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
+            <a routerLink="/home" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
+        </li>
+        <li>
+            <a routerLink="/store" class="p-3 hover:text-purple-600 ml-8">Tienda</a>
         </li>
     </ul>
-
     <ul class="flex items-center">
+      <!-- todo: guardar en la db la foto del src por defecto y que la puedan cambiar, modificar el ts para ello -->
       <div class="ml-3 relative" *ngIf="isAuthenticated()">
         <div (click)="isMenuDisplayed()">
           <button class="bg-gray-800 flex text-sm rounded-full focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white" id="user-menu" aria-haspopup="true">
@@ -15,8 +18,8 @@
           </button>
         </div>
         <div class="origin-top-right absolute right-0 mt-2 w-48 rounded-md shadow-lg py-1 bg-white ring-1 ring-black ring-opacity-5 hidden" id="menu-toggle" role="menu" aria-orientation="vertical" aria-labelledby="user-menu">
-          <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Mi perfil</a>
-          <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Configuracion</a>
+          <a routerLink="/profile" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Mi perfil</a>
+          <a routerLink="/settings" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem">Configuracion</a>
           <a routerLink="" class="block px-4 py-2 text-sm text-gray-700 hover:bg-gray-100" role="menuitem" (click)="logout()">Cerrar sesión</a>
         </div>
       </div>
