changes on landing page

--- a/artist4all_angular/src/app/app.component.html
+++ b/artist4all_angular/src/app/app.component.html
@@ -1,5 +1,5 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
-<div>
+<!--<div>
   <nav class="p-6 bg-gray-200 h-14 flex justify-between">
     <ul class="flex items-center">
         <li>
@@ -23,7 +23,7 @@
       </div>
     </ul>
   </nav>
-</div>
+</div>-->
 
 <router-outlet></router-outlet>
 <footer class="bg-white">
@@ -108,7 +108,7 @@
 </footer>
 <script>
     function toggleMenu() {
-    var element = document.getElementById('profile-menu')
+    var element = document.getElementById('profile-menu');
     if (element.classList.contains('hidden')) {
         element.classList.remove('hidden');
     }
