--- a/artist4all_angular/src/app/components/secure/profile/profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/profile.component.html
@@ -1,2 +1,159 @@
 <app-user-navbar></app-user-navbar>
-<p>profile works!</p>
+<div class="h-screen flex overflow-hidden bg-white">  
+    <!-- Static sidebar for desktop -->
+    <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
+      <div class="flex-1 relative z-0 flex overflow-hidden">
+        <main class="flex-1 relative z-0 overflow-y-auto focus:outline-none xl:order-last" tabindex="0">
+          <article>
+            <!-- Profile header -->
+            <div>
+              <div>
+                <img class="h-32 w-full object-cover lg:h-48" src="https://images.unsplash.com/photo-1444628838545-ac4016a5418a?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&amp;ixlib=rb-1.2.1&amp;auto=format&amp;fit=crop&amp;w=1950&amp;q=80" alt="">
+              </div>
+              <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+                <div class="-mt-12 sm:-mt-16 sm:flex sm:items-end sm:space-x-5">
+                  <div class="flex">
+                    <img class="h-24 w-24 rounded-full ring-4 ring-white sm:h-32 sm:w-32" src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=8&amp;w=1024&amp;h=1024&amp;q=80" alt="">
+                  </div>
+                  <div class="mt-6 sm:flex-1 sm:min-w-0 sm:flex sm:items-center sm:justify-end sm:space-x-6 sm:pb-1">
+                    <div class="sm:hidden 2xl:block mt-6 min-w-0 flex-1">
+                      <h1 class="text-2xl font-bold text-gray-900 truncate">
+                        Ricardo Cooper
+                      </h1>
+                    </div>
+                    <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
+                      <a href="/messages"><button type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
+                        <!-- Heroicon name: solid/mail -->
+                        
+                        <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+                          <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
+                          <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
+                        </svg>
+                        <span>Message</span>
+                      </button></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="hidden sm:block 2xl:hidden mt-6 min-w-0 flex-1">
+                  <h1 class="text-2xl font-bold text-gray-900 truncate">
+                    Ricardo Cooper
+                  </h1>
+                </div>
+              </div>
+            </div>
+  
+            <!-- Tabs -->
+            <div class="mt-6 sm:mt-2 2xl:mt-5">
+              <div class="border-b border-gray-200">
+                <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+                  <nav class="-mb-px flex space-x-8" aria-label="Tabs">
+                    <!-- Current: "border-pink-500 text-indigo-600", Default: "border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300" -->
+                    <a href="#" class="border-pink-500 text-gray-900 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm" aria-current="page">
+                      Profile
+                    </a>
+                    <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                      Calendar
+                    </a>
+                    <a href="#" class="border-transparent text-gray-500 hover:text-gray-700 hover:border-gray-300 whitespace-nowrap py-4 px-1 border-b-2 font-medium text-sm">
+                      Recognition
+                    </a>
+                  </nav>
+                </div>
+              </div>
+            </div>
+  
+            <!-- Description list -->
+            <div class="mt-6 max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
+              <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Phone
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    (555) 123-4567
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Email
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    ricardocooper@example.com
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Title
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    Senior Front-End Developer
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Team
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    Product Development
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Location
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    San Francisco
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Sits
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    Oasis, 4th floor
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Salary
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    $145,000
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-1">
+                  <dt class="text-sm font-medium text-gray-500">
+                    Birthday
+                  </dt>
+                  <dd class="mt-1 text-sm text-gray-900">
+                    June 8, 1990
+                  </dd>
+                </div>
+  
+                <div class="sm:col-span-2">
+                  <dt class="text-sm font-medium text-gray-500">
+                    About
+                  </dt>
+                  <dd class="mt-1 max-w-prose text-sm text-gray-900">
+                    <p>
+                      Tincidunt quam neque in cursus viverra orci, dapibus nec tristique. Nullam ut sit dolor consectetur urna, dui cras nec sed. Cursus risus congue arcu aenean posuere aliquam.
+                    </p>
+                    <p class="mt-5">
+                      Et vivamus lorem pulvinar nascetur non. Pulvinar a sed platea rhoncus ac mauris amet. Urna, sem pretium sit pretium urna, senectus vitae. Scelerisque fermentum, cursus felis dui suspendisse velit pharetra. Augue et duis cursus maecenas eget quam lectus. Accumsan vitae nascetur pharetra rhoncus praesent dictum risus suspendisse.
+                    </p>
+                  </dd>
+                </div>
+              </dl>
+            </div>
+          </article>
+        </main>
+      </div>
+    </div>
+  </div>
