modification login, register and db to work with tokens, update token generator and export db from pma, removed user data from front end

--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -5,7 +5,10 @@
             <a routerLink="/home" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
         </li>
         <li>
-            <a routerLink="/store" class="p-3 hover:text-purple-600 ml-8">Tienda</a>
+            <a routerLink="/home" class="p-3 hover:text-purple-600 ml-8">Home</a>
+        </li>
+        <li>
+            <a routerLink="/store" class="p-3 hover:text-purple-600">Tienda</a>
         </li>
     </ul>
     <ul class="flex items-center">
