--- a/artist4all_angular/src/app/app.component.html
+++ b/artist4all_angular/src/app/app.component.html
@@ -9,8 +9,8 @@
         </div>
 
         <div class="px-5 py-2">
-        <a href="#" class="text-base text-gray-400 hover:text-white">
-            Blog
+        <a href="/contact" class="text-base text-gray-400 hover:text-white">
+            Contacto
         </a>
         </div>
 
