--- a/artist4all_angular/src/app/components/public/login/login.component.html
+++ b/artist4all_angular/src/app/components/public/login/login.component.html
@@ -1,9 +1,11 @@
-<div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8">
+<!--<app-user-navbar></app-user-navbar>-->
+<div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8" id="background">
     <div class="sm:mx-auto sm:w-full sm:max-w-md">
+      <a href="/"><img src="assets/img/logo.png" class="mx-auto h-12 w-auto" alt=""></a>
       <!--<img class="mx-auto h-12 w-auto" src="https://tailwindui.com/img/logos/workflow-mark-purple-600.svg" alt="Workflow">-->
-      <h2 class="text-center text-3xl font-extrabold text-gray-900">
+      <!--<h2 class="text-center text-3xl font-extrabold text-gray-900">
         Inicia sesión
-      </h2>
+      </h2>-->
     </div>
 
     <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-md">
@@ -48,6 +50,12 @@
             </button>
           </div>
         </form>
+
+        <div class="text-sm">
+          <p href="#" class="font-normal text-center text-black mt-6">
+            ¿Aún no tienes una cuenta? Regístrate <a href="/register" class="font-medium text-purple-600 hover:text-purple-500">aquí</a>
+          </p>
+        </div>
 
         <!--<div class="mt-6">
           <div class="relative">
