--- a/artist4all_angular/src/app/components/public/register/register.component.html
+++ b/artist4all_angular/src/app/components/public/register/register.component.html
@@ -1,9 +1,11 @@
+<!--<app-user-navbar></app-user-navbar>-->
 <div class="min-h-screen bg-gray-50 flex flex-col py-12 sm:px-6 lg:px-8">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
+    <a href="/"><img src="assets/img/logo.png" class="mx-auto h-12 w-auto" alt=""></a>
     <!--<img class="mx-auto h-14 w-auto" src="../assets/img/logo.png" alt="Workflow">-->
-    <h2 class="text-center text-3xl font-extrabold text-gray-900">
+    <!--<h2 class="text-center text-3xl font-extrabold text-gray-900">
       Regístrate
-    </h2>
+    </h2>-->
   </div>
 
   <div class="mt-8 sm:mx-auto sm:w-full sm:max-w-2xl">
@@ -120,7 +122,7 @@
             </a>
           </div>
         </div>
-
+        
         <div>
           <button type="submit"
             class="w-full flex justify-center py-2 px-4 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-purple-600 hover:bg-purple-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-purple-500">
@@ -128,6 +130,12 @@
           </button>
         </div>
       </form>
+
+      <div class="text-sm">
+        <p href="#" class="font-normal text-center text-black mt-6">
+          ¿Ya tienes una cuenta? Entra <a href="/login" class="font-medium text-purple-600 hover:text-purple-500">aquí</a>
+        </p>
+      </div>
 
       <!--<div class="mt-6">
           <div class="relative">
