added form validation frontend

--- a/artist4all_angular/src/app/components/public/login/login.component.html
+++ b/artist4all_angular/src/app/components/public/login/login.component.html
@@ -25,7 +25,8 @@
               Contraseña
             </label>
             <div class="mt-1">
-              <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña" id="password" name="password" type="password" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
+              <!-- password must contain 8 or more characters that are of at least one number, and one uppercase and lowercase letter -->
+              <input #inputPassword="ngModel" [(ngModel)]="password" placeholder="Introduce tu contraseña" id="password" name="password" type="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" autocomplete="current-password" required class="appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm placeholder-gray-400 focus:outline-none focus:ring-purple-500 focus:border-purple-500 sm:text-sm">
             </div>
           </div>
 
