datos de la db en profile

--- a/artist4all_angular/src/app/components/secure/profile/profile.component.html
+++ b/artist4all_angular/src/app/components/secure/profile/profile.component.html
@@ -1,5 +1,5 @@
 <app-user-navbar></app-user-navbar>
-<div class="h-screen flex overflow-hidden bg-white">  
+<div class="h-screen flex overflow-hidden bg-white">
     <!-- Static sidebar for desktop -->
     <div class="flex flex-col min-w-0 flex-1 overflow-hidden">
       <div class="flex-1 relative z-0 flex overflow-hidden">
@@ -13,18 +13,18 @@
               <div class="max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="-mt-12 sm:-mt-16 sm:flex sm:items-end sm:space-x-5">
                   <div class="flex">
-                    <img class="h-24 w-24 rounded-full ring-4 ring-white sm:h-32 sm:w-32" src="https://images.unsplash.com/photo-1463453091185-61582044d556?ixlib=rb-=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=facearea&amp;facepad=8&amp;w=1024&amp;h=1024&amp;q=80" alt="">
+                    <img class="h-24 w-24 rounded-full ring-4 ring-white sm:h-32 sm:w-32" src="{{ img }}" alt="">
                   </div>
                   <div class="mt-6 sm:flex-1 sm:min-w-0 sm:flex sm:items-center sm:justify-end sm:space-x-6 sm:pb-1">
                     <div class="sm:hidden 2xl:block mt-6 min-w-0 flex-1">
                       <h1 class="text-2xl font-bold text-gray-900 truncate">
-                        Ricardo Cooper
+                        {{ name }} {{ surname1 }}
                       </h1>
                     </div>
                     <div class="mt-6 flex flex-col justify-stretch space-y-3 sm:flex-row sm:space-y-0 sm:space-x-4">
                       <a href="/messages"><button type="button" class="inline-flex justify-center px-4 py-2 border border-gray-300 shadow-sm text-sm font-medium rounded-md text-gray-700 bg-white hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-pink-500">
                         <!-- Heroicon name: solid/mail -->
-                        
+
                         <svg class="-ml-1 mr-2 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
                           <path d="M2.003 5.884L10 9.882l7.997-3.998A2 2 0 0016 4H4a2 2 0 00-1.997 1.884z" />
                           <path d="M18 8.118l-8 4-8-4V14a2 2 0 002 2h12a2 2 0 002-2V8.118z" />
@@ -36,12 +36,12 @@
                 </div>
                 <div class="hidden sm:block 2xl:hidden mt-6 min-w-0 flex-1">
                   <h1 class="text-2xl font-bold text-gray-900 truncate">
-                    Ricardo Cooper
+                    {{ name }} {{ surname1 }}
                   </h1>
                 </div>
               </div>
             </div>
-  
+
             <!-- Tabs -->
             <div class="mt-6 sm:mt-2 2xl:mt-5">
               <div class="border-b border-gray-200">
@@ -61,7 +61,7 @@
                 </div>
               </div>
             </div>
-  
+
             <!-- Description list -->
             <div class="mt-6 max-w-5xl mx-auto px-4 sm:px-6 lg:px-8">
               <dl class="grid grid-cols-1 gap-x-4 gap-y-8 sm:grid-cols-2">
@@ -73,16 +73,16 @@
                     (555) 123-4567
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Email
                   </dt>
                   <dd class="mt-1 text-sm text-gray-900">
-                    ricardocooper@example.com
+                    {{ email }}
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Title
@@ -91,7 +91,7 @@
                     Senior Front-End Developer
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Team
@@ -100,7 +100,7 @@
                     Product Development
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Location
@@ -109,7 +109,7 @@
                     San Francisco
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Sits
@@ -118,7 +118,7 @@
                     Oasis, 4th floor
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Salary
@@ -127,7 +127,7 @@
                     $145,000
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-1">
                   <dt class="text-sm font-medium text-gray-500">
                     Birthday
@@ -136,7 +136,7 @@
                     June 8, 1990
                   </dd>
                 </div>
-  
+
                 <div class="sm:col-span-2">
                   <dt class="text-sm font-medium text-gray-500">
                     About
