--- a/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
+++ b/artist4all_angular/src/app/components/secure/user-navbar/user-navbar.component.html
@@ -1,14 +1,14 @@
 <div>
-  <nav class="p-6 bg-gray-200 h-14 flex justify-between">
+  <nav class="p-6 bg-white h-14 flex justify-between">
     <ul class="flex items-center">
         <li>
             <a routerLink="/home" class="p-3"><img src="assets/img/logo.png" alt="logo" class="h-8"></a>
         </li>
         <li>
-            <a routerLink="/home" class="p-3 hover:text-purple-600 ml-8">Home</a>
+            <a routerLink="/home" class="p-3 hover:text-blue-800 ml-12">Home</a>
         </li>
         <li>
-            <a routerLink="/store" class="p-3 hover:text-purple-600">Tienda</a>
+            <a routerLink="/store" class="p-3 hover:text-blue-800 ml-4">Tienda</a>
         </li>
     </ul>
     <ul class="flex items-center">
